--- a/cc-gateway/service.yaml
+++ b/cc-gateway/service.yaml
@@ -1,12 +1,12 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: mynginx
+  name: cc-gateway-serice
 spec:
   type: LoadBalancer
   ports:
-    - port: 80
+    - port: 8080
       protocol: TCP
       targetPort: 80
   selector:
-    run: mynginx
+    run: cc-gateway-serice
