--- a/cc-gateway/cc-gateway-service.yml
+++ b/cc-gateway/cc-gateway-service.yml
@@ -13,6 +13,6 @@ spec:
     targetPort: 8080
   selector:
     app: cc-gateway-service
-  type: ClusterIP
+  type: loadBalancer
 status:
   loadBalancer: {}
