--- a/c1/cc-cardata-service.yml
+++ b/c1/cc-cardata-service.yml
@@ -13,6 +13,6 @@ spec:
     targetPort: 8081
   selector:
     app: cc-cardata-service
-  type: ClusterIP
+  type: LoadBalancer
 status:
   loadBalancer: {}
